--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,8 @@ description: A new Flutter project.
 version: 1.0.0+1
 publish_to: none
 
+# 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
+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
 environment:
   sdk: ">=3.0.0 <4.0.0"
 
