--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,12 @@ dependencies:
   formz: ^0.6.0
   google_fonts: ^6.1.0
   meta: ^1.7.0
+  local_storage_todos_api:
+    path: packages/local_storage_todos_api
+  todos_api:
+    path: packages/todos_api
+  todos_repository:
+    path: packages/todos_repository
 
 dev_dependencies:
   bloc_test: ^9.0.0
