--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,11 @@ dependencies:
     path: packages/todos_api
   todos_repository:
     path: packages/todos_repository
+  flex_color_scheme: ^7.3.1
 
 dev_dependencies:
   bloc_test: ^9.0.0
+  device_preview: ^1.1.0
   flutter_gen: ^5.3.2
   flutter_test:
     sdk: flutter
