--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   todos_repository:
     path: packages/todos_repository
   flex_color_scheme: ^7.3.1
+  awesome_bottom_bar: ^1.2.4
 
 dev_dependencies:
   bloc_test: ^9.0.0
